	  definitions to typemap file and update constant() and
	  options functions to use uint64_t with OpenSSL 3.0.0 and
	  later when Perl is compiled with 64bit integers. With 32bit
	  integers, the functions remain as they are: constant()
	  functions return double and options functions return
	  long. This partially fixes GH-315, 32bit integer Perls need
	  to be handled separately.

1.91_01 2021-10-24
	- Correct X509_STORE_CTX_init() return value to integer. Previous
	  versions of Net::SSLeay return nothing.
	- Update tests to call close() to avoid problems seen with
	  test 44_sess.t, and possibly other tests, running on older
	  Windows Perl versions. Also add some missing calls in tests
	  to shutdown and free ssl structures.
	- Fix multiple formatting errors in the documentation for Net::SSLeay.
	  Thanks to John Jetmore.
	- Check for presence of libssl headers in Makefile.PL, and exit with an
	  error instead of generating an invalid Makefile if they cannot be found.
	  Fixes RT#105189. Thanks to James E Keenan for the report.
	- Added support for SSL_CTX_set_msg_callback/SSL_set_msg_callback
	  Thanks to Tim Aerts.
	- Adjust time in ASN1_TIME_timet based on current offset to GMT to
	  address GH-148. Thanks to Steffen Ullrich.
	- Multiple updates to tests to match OpenSSL 3.0 behaviour.
	  Thanks to Michal Josef Špaček.
	- OpenSSL 3.0 related changes in tests include:
	  - TLSv1 and TLSv1.1 require security level 0 starting with 3.0 alpha 5.
	  - SSL_CTX_set_ciphersuites() and SSL_set_ciphersuites() ignore
	    unknown ciphersuites starting with 3.0 alpha 11.
	  - Error code and error string packing and formatting changes.
	  - PEM_get_string_PrivateKey default algorithm requires legacy provider.
	- See OpenSSL manual page migration_guide(7) for more information about
	  changes in OpenSSL 3.0.
	- Automatically detect OpenSSL installed via Homebrew on ARM-based macOS
	  systems. Thanks to Graham Knop for the patch.